# point

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
point/: errors.py
point/ast/: nodes.py
point/builders/: glossary.py  graph.py  paths.py  snippets.py
point/cli/: main.py
point/compiler/: compiler.py  pipeline.py
point/config/: loader.py  model.py
point/parser/: parser.py
point/project/: cleaner.py  creator.py  learning_path.py  manager.py  scanner.py
point/templates/: lesson.point  package.json
point/tokenizer/: token.py  tokenizer.py
point/validators/: validator.py
point/vitepress/: generator.py
point/vitepress/components/: GraphViewer.vue
tests/: run_pipeline.py  test_compiler.py  test_config_loader.py  test_conftest.py  test_creator.py  test_glossary.py  test_graph.py  test_manager.py  test_parser.py  test_paths.py  test_pipeline.py  test_scanner.py  test_snippets.py  test_tokenizer.py  test_validator.py  test_vitepress.py
