[build-system]
requires = [
"setuptools>=68",
"wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "point"
version = "1.0.0"

description = "Educational authoring language and static course generation toolkit"

readme = "README.md"

requires-python = ">=3.11"

license = { text = "MIT" }

authors = [
{ name = "Undreamt" }
]

keywords = [
"education",
"learning",
"courseware",
"documentation",
"compiler",
"static-site",
"vitepress",
"markdown",
"authoring",
"point"
]

classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: Education",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Topic :: Education",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
"typer>=0.12",
"rich>=13.7",
]

[project.optional-dependencies]

dev = [
"pytest>=8.0",
"pytest-cov>=5.0",
"ruff>=0.5",
]

[project.urls]

Homepage = "https://github.com/undreamt-hq/point"
Repository = "https://github.com/undreamt-hq/point"
Issues = "https://github.com/undreamt-hq/point/issues"

[project.scripts]

point = "point.cli.main:app"

[tool.setuptools.packages.find]

where = ["."]
include = ["point*"]

[tool.pytest.ini_options]

testpaths = [
"tests"
]

python_files = [
"test_*.py"
]

addopts = "-v"

[tool.coverage.run]

source = [
"point"
]

[tool.ruff]

line-length = 79
target-version = "py311"

[tool.ruff.lint]

select = [
"E",
"F",
"I",
]
